# vibe-cat

./: .gitignore  Cargo.toml  Info.plist  README.md  build-app.sh  dev.sh  说明.md
.github/workflows/: release.yml
docs/plans/: 2026-03-15-display-location-design.md  2026-03-15-display-location-menu.md
docs/plans/manual-checklists/: dock-layout-regression.md
src/: approve.rs  cat.rs  cat_layout.rs  events.rs  gui.rs  i18n.rs  installer.rs  logger.rs  main.rs  server.rs  tail.rs  tray.rs  tray_win.rs
src/assets/: AppIcon.icns
