[package]
name = "vibe-cat"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
dirs = "5"
fs2 = "0.4"
toml = "0.8"
eframe = { version = "0.31", features = ["wgpu"] }
image = { version = "0.25", default-features = false, features = ["png"] }
rand = "0.8"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
opentelemetry-proto = { version = "0.27", features = ["gen-tonic-messages"] }
prost = "0.13"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = [
    "NSStatusBar", "NSStatusItem", "NSStatusBarButton",
    "NSMenu", "NSMenuItem",
    "NSImage", "NSImageRep", "NSBitmapImageRep", "NSGraphics",
    "NSButton", "NSControl", "NSView", "NSResponder",
    "NSApplication", "NSRunningApplication",
] }
objc2-foundation = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_Globalization",
    "Win32_Foundation",
] }
tray-icon = "0.19"

[package.metadata.bundle]
name = "VibeCat"
identifier = "com.eko.vibe-cat"
category = "Developer Tool"
short_description = "Claude Code Hook 事件监听器"
osx_minimum_system_version = "12.0"
icon = ["src/assets/AppIcon.icns"]

[profile.release]
strip = true
lto = true
opt-level = "z"
